# pp-security-master

./: .dockerignore  .editorconfig  .env.example  .gemini.json  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  alembic.ini  codecov.yaml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: settings.json
.claude/commands/: README.md  workflow-implementation.md  workflow-plan-validation.md  workflow-prepare-pr.md  workflow-resolve-issue.md  workflow-review-cycle.md  workflow-review-pr.md  workflow-scope-analysis.md  workflow-validate-test-coverage.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-gate.yml  ci.yml  codeql.yml  renovate-auto-merge.yml  scorecard.yml  security.yml  sonarcloud.yml
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
docs/: TROUBLESHOOTING.md  VALIDATION_REPORT_P0-001.md  known-vulnerabilities.md  workflow-command-summary.md  workflow-improvements-summary.md  workflow-plan-validation-optimized.md
docs/adr/: ADR-001-transaction-centric-architecture.md  ADR-002-portfolio-performance-backup-restoration.md  ADR-003-securities-master-data-sourcing-hierarchy.md  ADR-004-data-quality-validation-framework.md  ADR-005-external-api-integration-strategy.md  ADR-006-security-and-authentication-architecture.md  ADR-007-deployment-and-infrastructure-strategy.md  ADR-008-external-repository-integration-strategy.md  ADR-009-institutional-grade-quantitative-portfolio-analytics.md  ADR-010-performance-testing-strategy.md  ADR-011-production-monitoring-architecture.md  ADR-012-data-quality-reporting-reconciliation.md  ADR-013-ai-portfolio-analysis-integration.md
docs/development/: REPOSITORY_RULESETS.md
docs/planning/: PROJECT-PLAN.md  claude-file-change-log.md  phase-0-completion-guide.md  phase-0-execution-guide.md  phase-0-foundation-overview.md  phase-0-foundation.md  phase-0-issues-P0-001-to-P0-005.md  phase-0-issues-P0-006-to-P0-010.md  phase-0-refinement-summary.md  phase-0-validation-checklist.md  phase-1-core-infrastructure.md  phase-1-execution-guide.md  phase-1-refinement-summary.md  phase-1-validation-checklist.md  phase-2-external-integrations.md  phase-2-validation-checklist.md  phase-3-institution-features.md  phase-4-analytics-pp-integration.md  phase-4-execution-guide.md  phase-4-troubleshooting-procedures.md  phase-4-validation-checklist.md  phase-5-enterprise-production-refined.md  phase-5-enterprise-production.md  phase-5-execution-guide.md  phase-5-prerequisites-setup.md  phase-5-production-deployment.md  phase-5-testing-completion.md  phase-5-troubleshooting-guide.md  phase-5-validation-checklist.md  phase-index.md  project_plan_review.md  revised_project_plan.md  roadmap.md
docs/planning/adr/: adr-001-phase2-branch-strategy.md
docs/planning/issue-plans/: phase-0-issue-P0-001-plan.md
docs/planning/phase-0-templates/: Makefile  pre-commit-config.yaml  pyproject.toml
docs/planning/phase-1-templates/: wells_fargo_parser_complete.py
docs/planning/phase-2-templates/: external_service_resilience.py  fund_classification_pipeline.py
docs/planning/phase-4-templates/: benchmark_security_generator.py  benchmark_usage_examples.py
docs/planning/phase-5-templates/: production_docker_compose.yml  security_master_gradio_interface.py
docs/project/: AGENTS.md  DATA_MIGRATION_PLAN.md  ERROR_RECOVERY_PROCEDURES.md  GEMINI.md  MVP.md  PP_REPOS_REFERENCE.md  PROJECT_PLAN.md  TAXONOMY_GUIDE.md
docs/superpowers/plans/: 2026-04-20-global-alignment.md  2026-04-21-phase-2a-toolchain-swaps.md  2026-04-23-phase-2b-basedpyright.md  2026-04-23-phase-2c-new-gates.md
docs/superpowers/specs/: 2026-04-20-global-alignment-design.md  2026-04-21-phase-2-toolchain-replacements-design.md
pytest_plugins/: __init__.py  coverage_hook_plugin.py
sample_data/: Bruce and Sue Williams.csv  Bruce and Sue Williams.json  BruceandSueWilliams_sample.xml  Interactive_Broker.csv  Securities_(Standard).csv
schema_exports/: security_master_schema.dbml  security_master_schema.md  security_master_schema.puml  security_master_schema.sql
scripts/: check_fips_compatibility.py  generate_requirements.sh  setup_environment.sh  validate_issue_P0-002.sh  validate_phase_0_complete.sh  vscode_coverage_hook.py  workflow_prepare_pr.py  workflow_review_pr.py
scripts/phase1/: setup_phase1_database.sh  validate_phase1_database.sh
scripts/phase2/: setup_external_integrations.sh  validate_phase2_setup.sh
scripts/phase3/: setup_multi_institution.sh  validate_phase3_setup.sh
scripts/phase4/: setup_analytics_pp_integration.sh
scripts/phase5/: setup_enterprise_production.sh
sql/phase4/: benchmark_security_tables.sql
sql/versions/: env.py
sql/versions/versions/: 25dcf857bb2f_initial_schema_with_all_models.py
src/pp_security_master/: __init__.py
src/security_master/: __init__.py  cli.py  utils.py
src/security_master/extractor/: __init__.py  pp_xml_parser.py
src/security_master/patch/: __init__.py  pp_xml_export.py
src/security_master/storage/: __init__.py  database.py  mappers.py  models.py  pp_models.py  schema_export.py  transaction_models.py  validators.py  views.py
tests/: __init__.py  conftest.py  test_db_connection.py  test_placeholder.py
tests/integration/: __init__.py
tests/integration/database/: test_postgresql_connection.py
tests/unit/: __init__.py  test_config_validation.py
