[build-system]
requires = ["poetry-core>=1.9.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Project metadata (PEP 621 standard)
[project]
name = "pp-security-master"
version = "0.1.0"
description = "Security-Master Service for Portfolio Performance (PP) - centralized asset classification and taxonomy management"
authors = [{name = "Byron", email = "byron@example.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["portfolio-performance", "securities", "classification", "taxonomy", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.11,<3.13"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/byron/pp-security-master"
repository = "https://github.com/byron/pp-security-master"
documentation = "https://github.com/byron/pp-security-master/wiki"

# Poetry-specific configuration
[tool.poetry]
package-mode = false
requires-poetry = ">=1.8.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Database dependencies
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9"
alembic = "^1.14.0"
# CLI and configuration
click = "^8.1"
python-dotenv = "^1.0.1"
# HTTP client for OpenFIGI API
httpx = "^0.27.0"
# Data validation
pydantic = ">=2.11.0,<3.0.0"
pydantic-settings = "^2.2.1"
# Utilities
structlog = ">=24.0.0,<26.0.0"
rich = "^14.0.0"
tenacity = "^9.0.0"
python-dateutil = "^2.9.0"
cryptography = "^45.0.0"
defusedxml = "^0.7.1"
pyyaml = "^6.0.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.1"
pytest-asyncio = ">=0.26.0"
pytest-cov = ">=6.0.0"
pytest-env = ">=1.1.3"
pytest-mock = ">=3.12.0"
pytest-timeout = ">=2.2.0"
pytest-xdist = ">=3.5.0"
pytest-rerunfailures = ">=12.0"
pytest-benchmark = ">=4.0.0"  # Performance testing
pytest-html = ">=4.1.1"  # HTML test reports
hypothesis = ">=6.98.9"
faker = ">=37.0.0"
black = "24.10.0"
ruff = "0.12.3"
mypy = "1.13.0"
types-pyyaml = ">=6.0.12.12"
types-python-dateutil = ">=2.8.19.20240106"
bandit = {extras = ["toml"], version = "1.7.7"}
safety = ">=3.0.1"
detect-secrets = ">=1.5.0"
pre-commit = ">=4.0.0"
nox = ">=2025.1.0"
ipython = ">=9.0.0"
ipdb = ">=0.13.13"
toml = "^0.10.2"
pip-audit = "^2.9.0"
isort = "^6.0.1"


[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
exclude = [
    "*.yaml",
    "*.yml",
    "sample_data/*",
    "schema_exports/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str_concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert detected
    "PLR0913", # too many arguments
    "BLE001",  # blind exception catching (needed for generic error handlers)
    "UP038",   # isinstance syntax (Python compatibility)
    "PLR2004", # magic numbers (for obvious values)
    "ARG002",  # unused arguments (interface compatibility)
    "SIM102",  # nested if statements (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S110", "ANN", "ARG", "PLR2004", "PLC0415", "T201"]
"scripts/*" = ["T20", "INP001", "ANN", "PLR0912", "PLR2004", "PTH123", "SIM118", "RUF013", "B007", "PLC0415", "G004", "S607", "S602", "S314", "S603", "RET504", "DTZ005", "RUF100"]
"noxfile.py" = ["ANN", "D"]
"*.yaml" = ["ALL"]
"*.yml" = ["ALL"]

[tool.ruff.lint.pylint]
max-branches = 18      # Increased from default 12 for industry standards
max-statements = 75    # Increased from default 50 for industry standards

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Dedicated isort configuration for import organization
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
known_third_party = ["pytest", "httpx", "click", "pydantic", "sqlalchemy", "alembic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["**/migrations/*", "**/venv/*", "**/.venv/*"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "noxfile"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "alembic.*",
    "defusedxml.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --strict-config --asyncio-mode=auto -m 'not slow' --tb=short --durations=10"
testpaths = ["tests"]
pythonpath = [".", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning",  # SQLAlchemy compatibility
    "ignore::sqlalchemy.exc.SADeprecationWarning",  # SQLAlchemy deprecation warnings
]
markers = [
    # Primary execution control markers
    "slow: genuinely slow tests (excluded from CI/CD and local development)",
    "fast: development cycle tests (for IDE integration)",

    # Test pyramid layer taxonomy (for analysis and metrics)
    "unit: unit-level tests (pure functions/classes; no I/O, no network) - DEFAULT",
    "component: component-level tests (single bounded context incl. DB/container mocks)",
    "contract: consumer-driven contract tests (OpenFIGI API contract verifications)",
    "integration: cross-service integration tests (multi-service / real DB)",
    "e2e: user-facing end-to-end tests (full user journey via CLI)",

    # Non-functional test types (for analysis and selective execution)  
    "perf: performance/load tests (benchmarks, stress, timing assertions)",
    "performance: performance/load tests (alias for perf)",
    "security: runtime security assertions (input validation, SQL injection tests)",

    # Execution behavior markers
    "smoke: basic functionality validation tests",
    "no_parallel: tests that should not run in parallel",

    # Component-specific markers (Security Master specific)
    "database: database-related tests (PostgreSQL, Alembic)",
    "classifier: classification engine tests (fund, equity, bond classification)",
    "extractor: broker file extraction tests (PP XML, IBKR Flex, Wells CSV, AltoIRA PDF)",
    "api: external API integration tests (OpenFIGI API)",
    "storage: storage layer tests (models, mappers, validators)",
    "patch: PP XML/JSON patch generation tests",
]

# Note: Custom pytest plugins loaded via conftest.py or command line

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
dynamic_context = "test_function"  # Function-level coverage tracking
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "scripts/*",
    "sql/versions/*",  # Alembic migrations
    "schema_exports/*",  # Generated schema files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    # Security Master specific
    "except DatabaseConnectionError:",  # DB connection fallbacks
    "if self.debug_mode:",  # Debug-only code
    "class .*\\(.*Protocol.*\\):",  # Protocol classes
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true  # Show which tests cover each line

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]
